fix the Imaging Bug

--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@ window.onload = onPageLoad;
 	
 	<!-- モブ -->
 	<div class="utsuho" id="_hand">
-		<img src="imgs/Resize/_hand.png"/>
+		<img src="imgs/Resize/hand.png"/>
 	</div>
 	<div class="utsuho" id="_tongue">
-		<img src="imgs/Resize/_tongue.png"/>
+		<img src="imgs/Resize/tongue.png"/>
 	</div>
 	<div class="utsuho" id="_hank">
-		<img src="imgs/Resize/_hank.png"/>
+		<img src="imgs/Resize/hank.png"/>
 	</div>
 	
 	<div class="phrase">
