changed loaded function from onload to ready

--- a/index.html
+++ b/index.html
@@ -329,7 +329,10 @@ function onPageLoad(){
 		return;
 	}
 }
-window.onload = onPageLoad;
+
+ $(document).ready(function(){
+	onPageLoad();
+});
 </script>
 </head>
 
